# system-integration

./: .env.embers  .env.f1r3sky  .gitignore  CLAUDE.md  COMPOSE_STRUCTURE.md  README.md  docker-compose.dev.yml  docker-compose.embers.yml  docker-compose.f1r3sky.yml  docker-compose.yml  pyproject.toml  services.yml
shardctl/: cli.py  compose.py  config.py  utils.py
